fix: remove scrollbar nahuy

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,8 +1,8 @@
 .header {
-  width: 100vw;
+  width: 100%;
   max-width: 1340px;
   padding: 12px 20px;
-  margin: 0 auto;
+  margin: 0;
   display: flex;
   justify-content: space-between;
   position: fixed;
