--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -2,7 +2,7 @@
   padding: 76px 20px 20px;
   width: 100%;
   max-width: 1340px;
-  margin: 0 auto;
+  margin: 0;
 }
 
 @media screen and (min-width: 768px) {
