--- a/components/flyCart/flyCart.module.css
+++ b/components/flyCart/flyCart.module.css
@@ -10,7 +10,7 @@
   z-index: 98;
   justify-content: center;
   align-items: center;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
 }
 
 .flycart_open {
